[package]
name = "cryptopuzzle"
version = "1.0.0"
authors = ["Jonas Wolf <jonas.wolf@jonaswolf.org>"]
edition = "2021"
license = "CC-BY-NC-SA-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true